app/overlays/secondary/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: elasticsearch
  namespace: elasticsearch-demo-app
spec:
  host: elasticsearch.apps.kvcluster2.apps.development.wels.home
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kibana
  namespace: elasticsearch-demo-app
spec:
  host: kibana.apps.kvcluster2.apps.development.wels.home
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: coordinate
  namespace: elasticsearch-demo-app
spec:
  host: coordinate.apps.kvcluster2.apps.development.wels.home
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: es-main00
  namespace: elasticsearch-demo-app
spec:
  host: es-main00.apps.kvcluster2.apps.development.wels.home
